refine default theme
establish themes concept, link from post list to individual post sites

--- a/example/.ssg.yaml.example
+++ b/example/.ssg.yaml.example
@@ -1,7 +1,10 @@
+theme: "default"
 title: "Ian Curtis - Blog"
 author: "Ian Curtis"
-authorImg: "https://avatars.githubusercontent.com/u/1234567?v=4"
-inputDir: "markdown"
-assetsDir: "assets"
+authorImg: "https://avatars.githubusercontent.com/u/1234568?v=4"
+contentDir: "."
 outputDir: "public"
 templateDir: "templates"
+github: "https://github.com/mona"
+linkedin: "https://linkedin.com/example"
+email: "user@example.net"
